openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-collection-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    name: news-collection
